2007-05-12  Paul Emsley  <emsley@localhost>

	* src/c-interface-build.cc (get_monomer): check that the library
	does not provide the restraints for the given 3-letter-code before
	passing to the libcheck function [Judit Debreczeni].

2007-05-04  Paul Emsley  <emsley@localhost>

	* src/molecule-class-info.cc: (anisotropic_atoms): Add in cholesky
	decomposition to the matrix.

2007-05-03  Paul Emsley  <emsley@localhost>

	* src/graphics-info-modelling.cc: Added
	execute_simple_nucleotide_addition() function.

2007-05-01  Paul Emsley  <emsley@localhost>

	* src/molecule-class-info.cc: Kevin Cowtan provided a patch for
	CNS map reading.

2007-04-13  Paul Emsley  <emsley@localhost>

	* src/pick.cc: Added Segid info to picked atom output info
	[Christie Durnham]

2007-04-07  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* Release 0.3.1 

	* enable NCS ghosts.  Add fractional matrix for LSQing. 

	* Release 0.3

2007-03-31  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/graphics-info.cc: (destroy_edit_backbone_rama_plot): set
	edit_phi_psi_plot to null so that it is not left dangling when we
	do edit phi/psi the the N-terminal residue, where there is no
	Ramachandran plot made.  Fixes Richard Baxter bug.

	(update_molecule_to): don't call molecule_class_info_t's
	update_molecule_to if there are no atoms in the guide point
	vector.  This stops the creation of a molecule with no atoms in
	it, which causes problems because it seems to be closed.  Also
	this means that the model is not modified without creating a new
	atom selection.  Fixes Richard Baxter bug.

2007-03-19  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/cc-interface.hh: Add USE_GUILE protection to
	dictionaries_read().

2007-03-06  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* src/c-interface-build.cc: (replace_fragment): function added.

2007-03-05  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* src/c-interface.h: (zoom_factor) function added.

2007-02-13  Paul Emsley  <emsley@ysbl.york.ac.uk>
