@@ -1,3 +1,8 @@
+2007-05-18  Paul Emsley  <emsley@ysbl.york.ac.uk>
+
+	* src/c-interface.cc: (hardware_stereo_mode): kill off the
+	SIDE_BY_SIDE_STEREO widget, if it was active.
+
 2007-05-12  Paul Emsley  <emsley@localhost>
 
 	* src/c-interface-build.cc (get_monomer): check that the library
